# mmts

./: .gitmodules  README.md  README.zh-CN.md
MultiModuleTeststandUI/: .gitignore  Dockerfile  README.md  README.tmp.md  README.virtualenv.md  app.py  init_bash_vars.sh  makefile_initialize_this_GUI  makefile_task3
MultiModuleTeststandUI/PythonTools/: batch_status.py
MultiModuleTeststandUI/data/: MMTS.service  MMTS.service.README.md  full_batch_config.example.yml  full_batch_demo.example.yml  mmts_configurations.yaml.bak  mmts_configurations.yaml.default  mmts_configurations.yaml.save
MultiModuleTeststandUI/docs/: demo_batch.md  full_batch.md
MultiModuleTeststandUI/external_packages/HGCal_Module_Production_Toolkit/scripts/: README.md  collect_IV_full.py  getIV.2.py  (+5 more)
MultiModuleTeststandUI/flask_apps/: app_task2.py  app_task3.py  app_task3_plot.py  shared_state.py
MultiModuleTeststandUI/scripts/: IVscan.initialize.sh  IVscan.run.sh  IVscan.stop.sh  run_full_mmts_batch.py  run_full_mmts_batch_demo.py  send_command_to_teststand.py  setup.create_daqclients.sh  setup.mmts_configurations.py  turn_on_HV_switch.py
MultiModuleTeststandUI/static/css/: theme.css
MultiModuleTeststandUI/templates/: index_mainpage.html  index_task2.html  index_task3.html
PLC_toolkits_mqtt_NTU/: .gitattributes  .gitignore  Control_HMI.yml  HMI_Control.yml  HMI_Control_5cycle.yml  HMI_Control_test.yml  README.md  control_hmi.py  docker-compose.yml  docker-compose.yml.bak  plc_io.py  plc_to_db.py  pyproject.toml  requirements.txt
PLC_toolkits_mqtt_NTU/local_database/sql/: init_db.sql
(+1 files in other folders)
